--- a/Microservice/Sneakers_store/pom.xml
+++ b/Microservice/Sneakers_store/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.github.fantastic_eureka</groupId>
     <artifactId>Sneakers_Store</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>3.0-SNAPSHOT</version>
 
     <packaging>war</packaging>
 
@@ -63,6 +63,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
