--- a/Microservice Java EE version/Sneakers_store/Sneakers_store_EE/pom.xml
+++ b/Microservice Java EE version/Sneakers_store/Sneakers_store_EE/pom.xml
@@ -46,6 +46,13 @@
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>2.0.SP1</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
