--- a/Microservice Java EE version/Sneakers_store/Sneakers_store_EE/pom.xml
+++ b/Microservice Java EE version/Sneakers_store/Sneakers_store_EE/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.fantastic_eureka</groupId>
     <artifactId>Sneakers_store_EE</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <name>Sneakers_store_EE</name>
     <packaging>war</packaging>
 
@@ -51,6 +51,13 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <version>2.0.SP1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>8.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
